--- a/native/markdownif/Cargo.toml
+++ b/native/markdownif/Cargo.toml
@@ -12,4 +12,4 @@ crate-type = ["dylib"]
 [dependencies]
 rustler = "0.21.0"
 lazy_static = "1.0"
-markdown = "0.2"
+pulldown-cmark = { version = "0.5", default-features = false }
