Added Features struct and allow conditional features

--- a/native/markdownif/Cargo.toml
+++ b/native/markdownif/Cargo.toml
@@ -11,5 +11,6 @@ crate-type = ["dylib"]
 
 [dependencies]
 rustler = "0.21.0"
+rustler_codegen = "0.21.0"
 lazy_static = "1.0"
 pulldown-cmark = { version = "0.5", default-features = false }
